SET(WRAPPERS_DIR ${CMAKE_CURRENT_SOURCE_DIR}/wrappers)
SET(PACKAGES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/packages)

# generate bindings
MACRO(GENERATE_BINDINGS IN_LANGUAGE)
  SET(WRAPPER "${WRAPPERS_DIR}/${IN_LANGUAGE}_karazeh_wrap.cxx")
  SET(LIB_NAME ${IN_LANGUAGE}_karazeh)
  SET(BINDINGS ${LIB_NAME}_bindings)

  ADD_CUSTOM_COMMAND( OUTPUT ${WRAPPER} 
    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/generate_wrappers.sh ${CMAKE_CURRENT_SOURCE_DIR} ${IN_LANGUAGE} "Generating Lua bindings")
  
  # the bindings library
  ADD_LIBRARY(${LIB_NAME} SHARED ${WRAPPER})
  SET_TARGET_PROPERTIES(${LIB_NAME} PROPERTIES PREFIX "")
  SET_SOURCE_FILES_PROPERTIES( ${WRAPPER} PROPERTIES GENERATED 1)
  TARGET_LINK_LIBRARIES(${LIB_NAME} kzh)

  ADD_CUSTOM_TARGET(${BINDINGS} DEPENDS ${WRAPPER})

  IF(NOT EXISTS "${WRAPPER}")
    MESSAGE(STATUS "${IN_LANGUAGE} bindings are not yet generated, forcing generation. \\
      Generate manually using make -B ${BINDINGS}")
    ADD_DEPENDENCIES(${LIB_NAME} ${BINDINGS})
  ENDIF()

  INSTALL(TARGETS ${LIB_NAME} LIBRARY DESTINATION lib)
ENDMACRO()

GENERATE_BINDINGS("lua")
